temp/objects/RevRecScheduleCategory__c.object
<CustomObject>
    <fields>
        <fullName>Amount1__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt_Wei__c</fullName>
        <label>Amount (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Deferred_Amount__c</fullName>
        <label>Converted Deferred Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Recognized_Amount__c</fullName>
        <label>Converted Recognized Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cor_Def_Amt_Wei__c</fullName>
        <label>Corporate Deferred Amount (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cor_Def_Amt__c</fullName>
        <label>Corporate Deferred Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cor_Rec_Amt_Wei__c</fullName>
        <label>Corporate Recognized Amount (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cor_Rec_Amt__c</fullName>
        <label>Corporate Recognized Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Def_Amt_Wei__c</fullName>
        <label>​Deferred Amount (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_Amount__c</fullName>
        <label>Deferred Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rec_Amt_Wei__c</fullName>
        <label>​Recognized Amount (Weighted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recognized_Amount__c</fullName>
        <formula>Amount1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recognized Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>RevRecOpportunityLineItemSchedule__c</referenceTo>
        <relationshipLabel>RevRecScheduleCategorys</relationshipLabel>
        <relationshipName>RevRecScheduleCategorys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RevRecScheduleCategory</label>
    <nameField>
        <label>RevRecScheduleCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecScheduleCategorys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>